# scout_apm_python_logging

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
examples/: dictConfig.py  flask_app.py
scout_apm_logging/: __init__.py  handler.py
scout_apm_logging/utils/: operation_utils.py
scout_apm_python_logging/: __init__.py  handler.py  otel_logger.py
scout_apm_python_logging/utils/: __init__.py  operation_utils.py
tests/unit/: test_handler.py  test_operation_utils.py  test_otel_logger.py
